# Klone

.github/workflows/: eslint-ci.yml
crm-backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
crm-backend/src/: __init__.py  config.py  engine.py  main.py  prompts.py
